Moved 'jlink' out of the 'target' directory